--- a/arch/arm64/configs/arianoxx_defconfig
+++ b/arch/arm64/configs/arianoxx_defconfig
@@ -4343,6 +4343,7 @@ CONFIG_SENSORS_SSP_LIGHT_REPORT_LUX=y
 # CONFIG_SENSORS_SSP_LIGHT_COLORID is not set
 # CONFIG_SENSORS_SSP_SX9306 is not set
 # CONFIG_SENSORS_SX9310_USE_2ND_CH is not set
+CONFIG_SENSORS_SX9310_NORMAL_TOUCH_THRESHOLD_CH2=246
 # CONFIG_SENSORS_CAN is not set
 # CONFIG_SENSORS_SX9320 is not set
 # CONFIG_SENSORS_SX9320_SUB is not set
